# rollers

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
crates/combine/: Cargo.toml
crates/combine/src/: exts.rs  lib.rs
crates/dice-mocks/: Cargo.toml
crates/dice-mocks/src/: lib.rs
crates/dice-parser/: Cargo.toml
crates/dice-parser/benches/: full_bench.rs
crates/dice-parser/src/: ast.rs  dice.pest  eval.rs  lex.rs  lib.rs  parser.rs
crates/dice-parser/src/ast/: display.rs  mod.rs  precedence.rs  recurse.rs  util.rs
crates/dice-parser/src/eval/: dice.rs  mod.rs  visualize.rs
crates/dice-parser/src/parser/: combinator.rs  mod.rs  pieces.rs
crates/dice-parser/tests/: integration_test.rs  proptests.proptest-regressions  proptests.rs
crates/dice-parser/tests/common/: mod.rs
crates/dice-parser/tests/proptest_helpers/: mod.rs
crates/dice_parse/: Cargo.toml
crates/dice_parse/examples/pratt/: parser.rs
crates/dice_parse/src/: lib.rs
crates/dice_parse/src/winnow_ext/: mod.rs  precedence.rs  shunting_yard.rs
crates/pratt/: Cargo.toml
crates/pratt/benches/pratt_vs_shunting/: main.rs
crates/pratt/examples/pratt_c/: bench.rs  main.rs  parser.rs
crates/pratt/examples/pratt_c_bump/: bench.rs  main.rs  parser.rs
crates/pratt/src/: lib.rs  precedence.rs  shunting_yard.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arb_expr.rs  pratt_parsing.rs
src/: dice.pest  lib.rs  main.rs
