[package]
name = "rollers"
version = "0.1.0"
authors = ["Sohum Mendon <smendon@proton.me>"]
description = """
rollers is a minimal dice-notation parsing tool.
"""
documentation = "https://github.com/ssmendon/rollers"
homepage = "https://github.com/ssmendon/rollers"
repository = "https://github.com/ssmendon/rollers"
keywords = ["dice", "calculator"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
edition = "2024"
rust-version = "1.87.0"

[workspace]
members = [
    "crates/*"
]

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
pest = "2.8.0"
pest_derive = "2.8.0"
poise = "0.6.1"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
