[workspace.package]
authors = ["Sohum Mendon <smendon@proton.me>"]
version = "0.1.0"
description = "rollers is a dice-notation parsing tool."

license = "MIT"
repository = "https://github.com/ssmendon/rollers"

categories = ["games", "command-line-interface"]
keywords = ["dice", "ast", "parsing"]

edition = "2024"
rust-version = "1.87.0"

[package]
name = "rollers"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = ["crates/dice-parser", "crates/dice-mocks", "crates/pratt", "crates/combine"]
resolver = "3"

[dependencies]
dice-parser = { version = "0.1.0", path = "crates/dice-parser" }

[dev-dependencies]
