[package]
name = "combine"
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
winnow = { version = "0.7.10", default-features = false }

[features]
alloc = ["winnow/alloc"]
std = ["alloc", "winnow/std"]
