[package]
name = "dice-parser"
authors.workspace = true
description.workspace = true
version.workspace = true

categories.workspace = true
keywords.workspace = true

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bumpalo = { version = "3.17.0", features = ["std", "collections", "boxed"] }
pratt = { version = "0.1.0", path = "../pratt" }
winnow = { version = "0.7.10", features = ["std", "simd"] }

[dev-dependencies]

[features]
