[package]
name = "dice_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { version = "3.17.0", features = ["std"] }
winnow = { version = "0.7.10", features = ["std"] }

[features]
unstable = []

[dev-dependencies]

[[example]]
name = "pratt"
test = true
required-features = ["unstable"]
