[package]
name = "dice_parse"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { version = "3.17.0", features = ["std"] }
winnow = { version = "0.7.10", features = ["std"] }

[features]
unstable-pratt = ["unstable"]
unstable = []

[dev-dependencies]
criterion = "0.6.0"

[[example]]
name = "pratt"
test = true
required-features = ["unstable-pratt"]

[[bench]]
name = "pratt"
path = "examples/pratt/bench.rs"
bench = true
harness = false
required-features = ["unstable-pratt"]
