[package]
name = "pratt"
version = "0.1.0"
description = "A Pratt Parsing library for winnow."

categories = ["parsing"]
keywords = ["pratt", "precedence", "winnow"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]

alloc = []
std = ["alloc", "winnow/std"]

[dependencies]
winnow = { version = "0.7", default-features = false }

[dev-dependencies]
bumpalo = { version = "3.17.0", features = ["std", "collections", "boxed"] }
criterion = "0.6.0"


[[example]]
name = "pratt_c"
test = true
required-features = ["std"]

[[bench]]
name = "pratt_c_example"
path = "examples/pratt_c/bench.rs"
harness = false
required-features = ["std"]

[[example]]
name = "pratt_c_bump"
test = true
required-features = ["std"]

[[bench]]
name = "pratt_c_bump_bench"
path = "examples/pratt_c_bump/bench.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "pratt_vs_shunting"
harness = false
required-features = ["std"]
